snapshots/syntax/library/functions/math/exp/exp_in_if.snap
---
source: src/syntax/library/functions/math/exp.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: IfStatement
      children:
        - kind: IfKeyword
          text: If
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: CallExpression
              children:
                - kind: Identifier
                  text: Exp
                - kind: LeftParenthesis
                  text: (
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: x
                - kind: RightParenthesis
                  text: )
            - kind: Whitespace
              text: " "
            - kind: GreaterThanOperator
              text: ">"
            - kind: Whitespace
              text: " "
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: threshold
        - kind: Whitespace
          text: " "
        - kind: ThenKeyword
          text: Then
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: ProcessValue
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: IfKeyword
          text: If
        - kind: Newline
          text: "\n"
